package io.mochadwi.yukmengaji.Class

data class Comments(
    var comment: String,
    var date: String,
    var time: String,
    var username: String
)