package io.mochadwi.yukmengaji.Class

data class FindFriends(
    var profileimage: String,
    var fullname: String,
    var status: String
)