package io.mochadwi.yukmengaji.Class

data class Friends(var date: String)