package io.mochadwi.yukmengaji.Class

data class Posts(
    var uid: String,
    var time: String,
    var date: String,
    var postimage: String,
    var description: String,
    var profileimage: String,
    var fullname: String
)