package io.mochadwi.yukmengaji.Class

data class Users(var fullname: String)