@startuml

title __ADMIN's Class Diagram__\n

  namespace com.yukkajian4.ahmad.yukkajian {
    namespace Adapter {
      class com.yukkajian4.ahmad.yukkajian.Adapter.PlaceArrayAdapter {
      }
    }
  }
  

  namespace com.yukkajian4.ahmad.yukkajian {
    class com.yukkajian4.ahmad.yukkajian.ChatActivity {
    }
  }
  

  namespace com.yukkajian4.ahmad.yukkajian {
    namespace Class {
      class com.yukkajian4.ahmad.yukkajian.Class.Comments {
      }
    }
  }
  

  namespace com.yukkajian4.ahmad.yukkajian {
    namespace Class {
      class com.yukkajian4.ahmad.yukkajian.Class.DateDialog {
      }
    }
  }
  

  namespace com.yukkajian4.ahmad.yukkajian {
    namespace Class {
      class com.yukkajian4.ahmad.yukkajian.Class.FindFriends {
      }
    }
  }
  

  namespace com.yukkajian4.ahmad.yukkajian {
    namespace Class {
      class com.yukkajian4.ahmad.yukkajian.Class.Friends {
      }
    }
  }
  

  namespace com.yukkajian4.ahmad.yukkajian {
    namespace Class {
      class com.yukkajian4.ahmad.yukkajian.Class.Messages {
      }
    }
  }
  

  namespace com.yukkajian4.ahmad.yukkajian {
    namespace Class {
      class com.yukkajian4.ahmad.yukkajian.Class.MessagesAdapter {
      }
    }
  }
  

  namespace com.yukkajian4.ahmad.yukkajian {
    namespace Class {
      class com.yukkajian4.ahmad.yukkajian.Class.Posts {
      }
    }
  }
  

  namespace com.yukkajian4.ahmad.yukkajian {
    namespace Class {
      class com.yukkajian4.ahmad.yukkajian.Class.Users {
      }
    }
  }
  

  namespace com.yukkajian4.ahmad.yukkajian {
    class com.yukkajian4.ahmad.yukkajian.ClickPostActivity {
    }
  }
  

  namespace com.yukkajian4.ahmad.yukkajian {
    class com.yukkajian4.ahmad.yukkajian.CommentsActivity {
    }
  }
  

  namespace com.yukkajian4.ahmad.yukkajian {
    class com.yukkajian4.ahmad.yukkajian.ForgotPasswordActivity {
    }
  }
  

  namespace com.yukkajian4.ahmad.yukkajian {
    class com.yukkajian4.ahmad.yukkajian.FriendsActivity {
    }
  }
  

  namespace com.yukkajian4.ahmad.yukkajian {
    class com.yukkajian4.ahmad.yukkajian.LoginActivity {
    }
  }
  

  namespace com.yukkajian4.ahmad.yukkajian {
    class com.yukkajian4.ahmad.yukkajian.MainActivity {
    }
  }
  

  namespace com.yukkajian4.ahmad.yukkajian {
    namespace Menu {
      class com.yukkajian4.ahmad.yukkajian.Menu.FindFriendsActivity {
      }
    }
  }
  

  namespace com.yukkajian4.ahmad.yukkajian {
    namespace Menu {
      class com.yukkajian4.ahmad.yukkajian.Menu.ProfileActivity {
      }
    }
  }
  

  namespace com.yukkajian4.ahmad.yukkajian {
    namespace Menu {
      class com.yukkajian4.ahmad.yukkajian.Menu.SettingsActivity {
      }
    }
  }
  

  namespace com.yukkajian4.ahmad.yukkajian {
    class com.yukkajian4.ahmad.yukkajian.PersonProfilActivity {
    }
  }
  

  namespace com.yukkajian4.ahmad.yukkajian {
    class com.yukkajian4.ahmad.yukkajian.PostActivity {
    }
  }
  

  namespace com.yukkajian4.ahmad.yukkajian {
    class com.yukkajian4.ahmad.yukkajian.RegisterActivity {
    }
  }
  

  namespace com.yukkajian4.ahmad.yukkajian {
    class com.yukkajian4.ahmad.yukkajian.SetupActivity {
    }
  }
  

  namespace io.mochadwi.yukmengaji {
    class io.mochadwi.yukmengaji.BuildConfig {
    }
  }
  

  com.yukkajian4.ahmad.yukkajian.Adapter.PlaceArrayAdapter .up.|> android.widget.Filterable
  com.yukkajian4.ahmad.yukkajian.Adapter.PlaceArrayAdapter -up-|> android.widget.ArrayAdapter
  com.yukkajian4.ahmad.yukkajian.ChatActivity o-- com.yukkajian4.ahmad.yukkajian.Class.MessagesAdapter : messagesAdapter
  com.yukkajian4.ahmad.yukkajian.Class.DateDialog .up.|> android.app.DatePickerDialog.OnDateSetListener
  com.yukkajian4.ahmad.yukkajian.Class.DateDialog -up-|> android.app.DialogFragment
  com.yukkajian4.ahmad.yukkajian.PostActivity .up.|> com.google.android.gms.common.api.GoogleApiClient.ConnectionCallbacks
  com.yukkajian4.ahmad.yukkajian.PostActivity .up.|> com.google.android.gms.common.api.GoogleApiClient.OnConnectionFailedListener
  com.yukkajian4.ahmad.yukkajian.PostActivity o-- com.yukkajian4.ahmad.yukkajian.Adapter.PlaceArrayAdapter : mPlaceArrayAdapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
